<resources>
    <string name="_12_15_am">12:15 AM</string>
    <string name="_1_time_a_day">- 1 Time a day</string>
    <string name="_1d">1D</string>
    <string name="_1m">1M</string>
    <string name="_1w">1W</string>
    <string name="_25_nov_12_13_am">25 Nov 12:13 AM</string>
    <string name="_25_nov_12_13_am_">25 Nov 12:13 AM</string>
    <string name="_3m">3M</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acessibility_recurrence_choose_end_date_description">change end date</string>
    <string name="action_day_view">Day view</string>
    <string name="action_item_no_info">No information available</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_today">Today</string>
    <string name="action_week_view">Week view</string>
    <string name="activity">ACTIVITY</string>
    <string name="acuspar">Acuspar</string>
    <string name="add">Add</string>
    <string name="add_insulin">Add Insulin</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="add_new">Add new</string>
    <string name="add_reminder">Add reminder by clicking on + button below</string>
    <string name="add_weight">Add Weight</string>
    <string name="additional_information">Additional Information</string>
    <string name="alert_dialog_title">Alert</string>
    <string name="app_name">Cooey</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asia_kolkata_utc_5_30">Asia/Kolkata UTC+5:30</string>
    <string name="async_error">Could not download events from the internet</string>
    <string name="avg_day">AVG/DAY</string>
    <string name="basal">Basal</string>
    <string name="battery_status">BATTERY STATUS</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="blood_glucose">BLOOD GLUCOSE</string>
    <string name="blood_pressure">BLOOD PRESSURE</string>
    <string name="blood_pressure_monitor">Blood Pressure Monitor</string>
    <string name="blood_sugar">BLOOD GLUCOSE</string>
    <string name="blood_sugar_not_added">Blood Sugar not added</string>
    <string name="bluetooth_title">Bluetooth</string>
    <string name="bolus">Bolus</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bp">BP</string>
    <string name="bp_could_not_add">The BP could not be added.</string>
    <string name="btn_retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="care_plan_name">Care Plan Name</string>
    <string name="careplan">CAREPLAN</string>
    <string name="careplan_not_assigned">Careplan not assigned</string>
    <string name="catalyst_copy_button">Copy</string>
    <string name="catalyst_debugjs">Debug JS Remotely</string>
    <string name="catalyst_debugjs_off">Stop Remote JS Debugging</string>
    <string name="catalyst_dismiss_button">Dismiss\n(ESC)</string>
    <string name="catalyst_element_inspector">Toggle Inspector</string>
    <string name="catalyst_heap_capture">Capture Heap</string>
    <string name="catalyst_hot_module_replacement">Enable Hot Reloading</string>
    <string name="catalyst_hot_module_replacement_off">Disable Hot Reloading</string>
    <string name="catalyst_jsload_error">Unable to download JS bundle. Did you forget to start the development server or connect your device?</string>
    <string name="catalyst_jsload_message">Fetching JS bundle</string>
    <string name="catalyst_jsload_title">Please wait…</string>
    <string name="catalyst_live_reload">Enable Live Reload</string>
    <string name="catalyst_live_reload_off">Disable Live Reload</string>
    <string name="catalyst_perf_monitor">Show Perf Monitor</string>
    <string name="catalyst_perf_monitor_off">Hide Perf Monitor</string>
    <string name="catalyst_poke_sampling_profiler">Start/Stop Sampling Profiler</string>
    <string name="catalyst_reload_button">Reload\n(R, R)</string>
    <string name="catalyst_reloadjs">Reload</string>
    <string name="catalyst_remotedbg_error">Unable to connect with remote debugger</string>
    <string name="catalyst_remotedbg_message">Connecting to remote debugger</string>
    <string name="catalyst_report_button">Report</string>
    <string name="catalyst_settings">Dev Settings</string>
    <string name="catalyst_settings_title">Catalyst Dev Settings</string>
    <string name="cd_negative_component">Cancel, do not set date/time</string>
    <string name="cd_positive_component">ok, set date/time</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">7cf2daab-917b-4195-9264-9032ac181e71</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_password">Confirm password</string>
    <string name="connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="connection_failure">Connection Failed! Try Again</string>
    <string name="connection_status">Connection Status</string>
    <string name="context">Context</string>
    <string name="device_pairing_complete">Device Pairing Complete</string>
    <string name="edit">EDIT</string>
    <string name="error_msg">Sorry Couldnt load your data</string>
    <string name="insulin_no_of_units">Insulin(No. of units)</string>
    <string name="maya">Maya</string>
    <string name="mood">MOOD</string>
    <string name="no_action_items">No action items for the day</string>
    <string name="notes">Notes</string>
    <string name="ok">OK</string>
    <string name="premix">Premix</string>
    <string name="recurrence_custom">custom…</string>
    <string name="recurrence_daily">every day</string>
    <string name="recurrence_does_not_repeat">does not repeat</string>
    <string name="recurrence_heading">repeat options</string>
    <string name="recurrence_monthly">every month</string>
    <string name="recurrence_weekly">every week</string>
    <string name="recurrence_yearly">every year</string>
    <string name="save">Save</string>
    <string name="speek_to_maya">Speek to Maya</string>
    <string name="take_reading">Take Reading</string>
    <string name="the_server_took_too_long_to_respond">The server took too long to respond.</string>
    <string name="time">Time</string>
    <string name="welcome">Welcome</string>
    <string name="your_personal_health_assistant">Your personal health assistant</string>
</resources>