<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@r$id/action_today" android:orderInCategory="100" android:title="@string/action_today" android:showAsAction="ifRoom" />
    <group android:checkableBehavior="single">
        <item android:id="@r$id/action_day_view" android:orderInCategory="100" android:title="@string/action_day_view" android:showAsAction="ifRoom" />
        <item android:id="@r$id/action_three_day_view" android:checked="true" android:orderInCategory="100" android:title="@string/action_three_day_view" android:showAsAction="ifRoom" />
        <item android:id="@r$id/action_week_view" android:orderInCategory="100" android:title="@string/action_week_view" android:showAsAction="ifRoom" />
    </group>
</menu>
