<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@id/llRecurrenceOptionsMenu" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="@dimen/recurrence_picker_width">
    <TextView android:id="@id/tvHeading" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/recurrence_heading" style="?attr/spRecurrencePickerHeadingStyle" />
    <ScrollView android:id="@id/svRecurrenceOptionsMenu" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/repeat_options_menu_top_margin">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:divider="@drawable/recurrence_menu_divider" android:showDividers="middle">
            <TextView android:id="@id/tvChosenCustomOption" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" style="?attr/spRecurrencePickerOptionsStyle" />
            <TextView android:id="@id/tvDoesNotRepeat" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/recurrence_does_not_repeat" style="?attr/spRecurrencePickerOptionsStyle" />
            <TextView android:id="@id/tvDaily" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/recurrence_daily" style="?attr/spRecurrencePickerOptionsStyle" />
            <TextView android:id="@id/tvWeekly" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/recurrence_weekly" style="?attr/spRecurrencePickerOptionsStyle" />
            <TextView android:id="@id/tvMonthly" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/recurrence_monthly" style="?attr/spRecurrencePickerOptionsStyle" />
            <TextView android:id="@id/tvYearly" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/recurrence_yearly" style="?attr/spRecurrencePickerOptionsStyle" />
            <TextView android:id="@id/tvCustom" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/recurrence_custom" style="?attr/spRecurrencePickerOptionsStyle" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
