<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_centerVertical="true">
        <ImageView android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0xaa01" android:layout_height="UNKNOWN_DATA_0xaa01" android:src="@drawable/round_done_button" />
        <TextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_marginBottom="15dp" android:text="@string/device_pairing_complete" android:textAlignment="center" />
        <LinearLayout android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="1.0">
            <Button android:id="@id/take_reading_button" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/take_reading" android:layout_weight="0.5" />
            <Button android:id="@id/ok_button" android:layout_width="UNKNOWN_DATA_0x1" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/ok" android:layout_weight="0.5" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
