<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v7.widget.CardView android:id="@id/bp_card_view" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x5a01" android:layout_margin="10dp">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/device_image" android:layout_width="UNKNOWN_DATA_0x7801" android:layout_height="UNKNOWN_DATA_0x7801" android:src="@drawable/bp_monitor" android:scaleType="centerInside" />
            <TextView android:textSize="18sp" android:id="@id/device_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:text="@string/blood_pressure_monitor" android:layout_toRightOf="@id/device_image" android:layout_marginStart="20dp" android:layout_toEndOf="@id/device_image" />
            <Button android:id="@id/take_reading_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/take_reading" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:layout_alignParentEnd="true" style="@style/Widget.AppCompat.Button.Borderless.Colored" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.RecyclerView android:id="@id/deviceReclerView" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@id/bp_card_view" android:layout_behavior="@string/appbar_scrolling_view_behavior" />
</RelativeLayout>
