<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="@color/dark_mint" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="30dp" android:text="@string/welcome" android:textAllCaps="true" />
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="5dp" android:layout_marginBottom="30dp" android:weightSum="3.0" android:layout_below="@id/title"
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <LinearLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:layout_weight="1.0">
            <ImageView android:layout_width="UNKNOWN_DATA_0x3c01" android:layout_height="UNKNOWN_DATA_0x3c01" android:srcCompat="@drawable/imv_maya" />
            <TextView android:textSize="24sp" android:textStyle="bold" android:textColor="@color/dark_mint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/maya" android:textAllCaps="true" />
            <TextView android:textSize="15sp" android:textColor="@color/dark_mint" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="UNKNOWN_DATA_0x12c01" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/your_personal_health_assistant" />
        </LinearLayout>
        <RelativeLayout android:gravity="clip_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x1" android:layout_weight="1.0">
            <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/dark_mint" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginBottom="80dp" android:text="@string/speek_to_maya" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
